# synthetic-data-generation-framework

./: README.md  log.conf
examples/acs13/: marginals.cfg  sb.cfg  sbmin.cfg
examples/acs13/data/: acs13_attrs.csv  acs13_budget.csv  acs13_dag.csv  acs13_grps.csv  acs13_order.csv  acs13_stats.csv
source/: CMakeLists.txt  data.h  extract.cpp  gen.cpp  gen.h  init.cpp  misc.h
source/base/: CMakeLists.txt
source/base/include/: config.h  defs.h  fileutils.h  genmodel.h  mathutils.h  misc.h  outputter.h  params.h  risaac.h  rng.h  rtm.h  singleton.h  store.h  synth.h
source/base/source/: fileutils.cpp  risaac.cpp  rng.cpp  store.cpp
